Comment for standards added as well as correct count